<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/t_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="180dp"
        android:layout_marginLeft="180dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="179dp"
        android:layout_marginRight="179dp"
        android:text="@string/text_register"
        android:textSize="40sp"
        app:fontFamily="@font/aldrich"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:text="@string/text_username"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/tf_username"
        app:layout_constraintTop_toBottomOf="@+id/t_register" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/text_name"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/tf_name"
        app:layout_constraintTop_toTopOf="@+id/tf_name" />

    <EditText
        android:id="@+id/tf_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/tf_email"
        app:layout_constraintTop_toBottomOf="@+id/t_register" />

    <EditText
        android:id="@+id/tf_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/tf_username"
        app:layout_constraintTop_toBottomOf="@+id/tf_username" />

    <EditText
        android:id="@+id/tf_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tf_name" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:text="@string/text_password"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/tf_password"
        app:layout_constraintTop_toTopOf="@+id/tf_password" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/text_email"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/tf_email"
        app:layout_constraintTop_toTopOf="@+id/tf_email" />

    <EditText
        android:id="@+id/tf_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/tf_email"
        app:layout_constraintTop_toBottomOf="@+id/tf_email" />

    <CheckBox
        android:id="@+id/cb_female"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/gender_female"
        app:layout_constraintEnd_toEndOf="@+id/tf_password"
        app:layout_constraintTop_toBottomOf="@+id/tf_password" />

    <CheckBox
        android:id="@+id/cb_male"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/gender_male"
        app:layout_constraintStart_toStartOf="@+id/tf_password"
        app:layout_constraintTop_toBottomOf="@+id/tf_password" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:text="@string/text_gender"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/cb_male"
        app:layout_constraintTop_toTopOf="@+id/cb_male" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:text="@string/text_contactNum"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/tf_phnum"
        app:layout_constraintTop_toTopOf="@+id/tf_phnum" />

    <EditText
        android:id="@+id/tf_phnum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/cb_female"
        app:layout_constraintTop_toBottomOf="@+id/cb_male" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="81dp"
        android:layout_marginRight="81dp"
        android:background="@drawable/custom_button"
        android:backgroundTint="@color/theme_color"
        android:text="@string/text_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tf_phnum" />

    <TextView
        android:id="@+id/text_gologinpage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/aldy_ownacc"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_register" />


</androidx.constraintlayout.widget.ConstraintLayout>